objects/Implementation_Coordinator__c.object
<CustomObject>
    <fields>
        <fullName>ASF_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ASF Details</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AccountLegalNameForWF1__c</fullName>
        <formula>Implementation_Tracking_ID__r.Account_Legal_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountLegalNameForWF1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountRecordTypeImpCoordinator__c</fullName>
        <description>This field is used in workflow to pull down the Account Record type- US172</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AccountRecordTypeImpCoordinator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>IF( ISBLANK( Implementation_Tracking_ID__r.Account_Legal_Name__r.Id ), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Account_Legal_Name__r.Id, Implementation_Tracking_ID__r.Account_Legal_Name__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_Advantage_Networks_Existing_Or_New__c</fullName>
        <label>Are Select Networks Existing or New</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing – No Updates Needed</fullName>
                </value>
                <value>
                    <fullName>Existing – WGS MO/WI Suffix Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_MO_WI_Suffixes_Impacted__c</fullName>
        <label>Are MO/WI Suffixes Impacted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Implementer__c</fullName>
        <formula>Implementation_Tracking_ID__r.Assigned_Implementer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Implementer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BEGID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BEGID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BPD_Loaded_To_NIC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BPD Loaded To NIC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BPD_Percentage_Complete__c</fullName>
        <label>BPD Percentage Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Banking_Type__c</fullName>
        <label>Banking Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BenefitWallet(Mellon)</fullName>
                </value>
                <value>
                    <fullName>HealthEquity (HEQ)</fullName>
                </value>
                <value>
                    <fullName>HSA Bank</fullName>
                </value>
                <value>
                    <fullName>Third Party - Bank Not Integrated</fullName>
                </value>
                <value>
                    <fullName>No Banking Required For Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Batch_Accum_Feed_To_PBM__c</fullName>
        <label>Batch Accum Feed To PBM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Batch_Eligibility_Feed_Includes__c</fullName>
        <label>Batch Eligibility Feed Includes</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Is_Pharmacy_Applicable__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Full Group</fullName>
                </value>
                <value>
                    <fullName>Partial Groups</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Batch_Eligibility_Feed_To_PBM__c</fullName>
        <label>Batch Eligibility Feed To PBM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefit_Approval_ACD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Approval ACD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Approval_Current_ECD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Approval Current ECD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Approval_Original_ECD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Approval Original ECD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Booklet_ECD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Booklet ECD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Coding_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Coding Details</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Benefit_Sign_Off_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Sign Off Details</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Benefit_Sign_Off_Status__c</fullName>
        <label>Benefit Sign Off Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Is_Medical_Benefits_Applicable__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active – Green</fullName>
                </value>
                <value>
                    <fullName>Active – Yellow</fullName>
                </value>
                <value>
                    <fullName>Active – Red</fullName>
                </value>
                <value>
                    <fullName>Complete - Green</fullName>
                </value>
                <value>
                    <fullName>Complete - Yellow</fullName>
                </value>
                <value>
                    <fullName>Complete - Red</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blue_Exchange_Details_National_Only__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Blue Exchange Details (National Only)</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CDH_Banking_ACD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CDH Banking ACD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDH_Setup_Status_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CDH Setup Status Details</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>Implementation_Tracking_ID__r.Claim_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Chat_Callback_SSCR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Clinical Chat/Callback SSCR Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Chat_Callback_SSCR_Status__c</fullName>
        <label>Clinical Chat/Callback SSCR Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clinical_SSCR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Clinical SSCR Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Status__c</fullName>
        <label>Clinical Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contracts_Impacted__c</fullName>
        <label>Contracts Impacted</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Is_SME_Area_Status_Applicable__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contracts_Notified__c</fullName>
        <label>Contracts Notified</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Is_SME_Area_Status_Applicable__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Anthem_Pharmacy_Benefits_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Anthem Pharmacy Benefits Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_BEGID_Provided_To_Client__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date BEGID Provided To Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Benefit_Booklet_Sent_To_Client__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Benefit Booklet Sent To Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_FTP_Moved_To_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date FTP Moved To Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_IBVD_Crosswalk_Posted_To_NIC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date IBVD/Crosswalk Posted To NIC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_IT_Resource_Assigned__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date IT Resource Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Implementations_Notified_Of_Sale__c</fullName>
        <formula>Implementation_Tracking_ID__r.Date_Implementations_Notified_Of_Sale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Implementations Notified Of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Estimated_Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Of Estimated Release</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Final_Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Of Final Release</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Portal_RTC_Submitted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Portal MPRF Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SSCR_Closed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date SSCR Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SSCR_Submitted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date SSCR Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_WLPRD_RTC_Submitted_For_MO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date JIRA Submitted For MO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_WLPRD_RTC_Submitted_For_WI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date JIRA Submitted For WI</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_From_Assignment__c</fullName>
        <formula>Implementation_Tracking_ID__r.Days_From_Assignment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days From Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_ACD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental ACD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Does_Client_Have_HWS__c</fullName>
        <label>Does Client Have HWS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EPID_Number_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EPID Number(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Eligibility_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eligibility Details</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employer_Portal_Access__c</fullName>
        <label>Employer Portal Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Phone_Line_Open_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated Phone Line Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fully_Insured_Contracts_Comp_ACD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fully Insured Contracts/Comp ACD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fully_Insured_Contracts_Comp_ECD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fully Insured Contracts/Comp ECD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fully_Insured_Evidence_Of_Coverage_ACD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fully Insured Evidence Of Coverage ACD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fully_Insured_Evidence_Of_Coverage_ECD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fully Insured Evidence Of Coverage ECD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_File_Testing_Completion_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding File Testing Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_File_Testing_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding File Testing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>IF( ISBLANK( Implementation_Tracking_ID__r.Group_Number__r.Id ), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Group_Number__r.Id, Implementation_Tracking_ID__r.Group_Number__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Structure_Approval_ACD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Structure Approval ACD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Structure_Approval_Current_ECD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Structure Approval Current ECD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Structure_Approval_ECD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Structure Approval ECD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Structure_Approval_Original_ECD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Structure Approval Original ECD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Structure_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Structure Details</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group_Structure_Status__c</fullName>
        <label>Group Structure Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Is_Group_Structure_Applicable__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active – Green</fullName>
                </value>
                <value>
                    <fullName>Active – Yellow</fullName>
                </value>
                <value>
                    <fullName>Active – Red</fullName>
                </value>
                <value>
                    <fullName>Complete - Green</fullName>
                </value>
                <value>
                    <fullName>Complete - Yellow</fullName>
                </value>
                <value>
                    <fullName>Complete - Red</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grp_Str_That_Commingles_Deductible__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Grp Str That Commingles Deductible</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grp_Str_That_Commingles_Infertility_LTM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Grp Str That Commingles Infertility LTM</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grp_Str_That_Commingles_LTM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Grp Str That Commingles LTM</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Grp_Str_That_Commingles_OOP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Grp Str That Commingles OOP</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSA_Addendum_Completion_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HSA Addendum Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSA_Funding_File_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HSA Funding File Status</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HWS_Setup_ACD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HWS Setup ACD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IBVD_Crosswalk_Status__c</fullName>
        <label>IBVD/Crosswalk Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Is_Pharmacy_Applicable__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Posted To NIC</fullName>
                </value>
                <value>
                    <fullName>No Updates Needed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Cards_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Cards Details</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IVR_SSCR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IVR SSCR Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_Status__c</fullName>
        <label>IVR Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Batch_Accum_List_Grp_Str_Info__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Batch Accum, List Grp Str Info</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_Partial_Batch_Elg_List_Grp_Str_Info__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Partial Batch Elg, List Grp Str Info</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name1__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Case_Name1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Effective_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Record_ID__c</fullName>
        <formula>HYPERLINK( LEFT($Api.Partner_Server_URL_340, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340))&amp; Implementation_Tracking_ID__r.Implementation_Record_ID__c , Implementation_Tracking_ID__r.Implementation_Record_ID__r.OrderNumber )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Tracking_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Tracking ID</label>
        <referenceTo>Implementation_Tracking__c</referenceTo>
        <relationshipLabel>Implementation Coordinators</relationshipLabel>
        <relationshipName>Implementation_Coordinators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Benefit_Walkthrough_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Initial Benefit Walkthrough Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Integration_Type__c</fullName>
        <label>Integration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Batch</fullName>
                </value>
                <value>
                    <fullName>Realtime LITES</fullName>
                </value>
                <value>
                    <fullName>Realtime ODS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interplan_Profiles_ACD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Interplan Profiles ACD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_AHG_Applicable__c</fullName>
        <label>Is AHG Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Advantage_Networks_Applicable__c</fullName>
        <label>Is Select Networks Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_CDH_Applicable__c</fullName>
        <label>Is CDH Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <isActive>false</isActive>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Deductible_Commingled__c</fullName>
        <label>Is Deductible Commingled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Group_Structure_Applicable__c</fullName>
        <label>Is Group Structure Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Infertility_LTM_Commingled__c</fullName>
        <label>Is Infertility LTM Commingled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_LTM_Commingled__c</fullName>
        <label>Is LTM Commingled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Medical_Benefits_Applicable__c</fullName>
        <label>Is Medical Benefits Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_OOP_Commingled__c</fullName>
        <label>Is OOP Commingled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Owner_the_Logged_in_user__c</fullName>
        <formula>IF(Owner:User.Id == $User.Id,True,False)</formula>
        <label>Is Owner the Logged in user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Pharmacy_Applicable__c</fullName>
        <label>Is Pharmacy Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_SME_Area_Status_Applicable__c</fullName>
        <label>Is SME Area Status Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>